/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

option java_package = "io.atomix.api.runtime.v1";
option java_outer_classname = "RuntimeV1";
option java_multiple_files = true;

import "gogoproto/gogo.proto";

service Runtime {
    rpc Connect (ConnectRequest) returns (ConnectResponse);
    rpc Configure (ConfigureRequest) returns (ConfigureResponse);
    rpc Disconnect (DisconnectRequest) returns (DisconnectResponse);
}

message RuntimeConfig {
    repeated Route routes = 1;
}

message Route {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    repeated string tags = 2;
    repeated PrimitiveSpec primitives = 3 [
        (gogoproto.nullable) = false
    ];
}

message StoreID {
    option (gogoproto.equal) = true;
    string namespace = 1;
    string name = 2;
}

message DriverID {
    option (gogoproto.equal) = true;
    string name = 1;
    string version = 2;
}

message PrimitiveID {
    option (gogoproto.equal) = true;
    string name = 1;
}

message PrimitiveType {
    option (gogoproto.equal) = true;
    string name = 1;
    string api_version = 2 [
        (gogoproto.customname) = "APIVersion"
    ];
}

message PrimitiveSpec {
    PrimitiveType type = 1 [
        (gogoproto.nullable) = false
    ];
    bytes config = 2;
}

message ConnectRequest {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    DriverID driver_id = 2 [
        (gogoproto.customname) = "DriverID",
        (gogoproto.nullable) = false
    ];
    bytes config = 3;
}

message ConnectResponse {

}

message ConfigureRequest {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
    bytes config = 2;
}

message ConfigureResponse {

}

message DisconnectRequest {
    StoreID store_id = 1 [
        (gogoproto.customname) = "StoreID",
        (gogoproto.nullable) = false
    ];
}

message DisconnectResponse {

}
